playground/notas_tests/valid/type-03.hulk
type A() {}
type B() inherits A() {}
let a:A = new B() in { let b:B = a as B in print(1); };
