playground/notas_tests/invalid/type-04.hulk
let p = 1 as String in print(p);
